--- a/package.json
+++ b/package.json
@@ -64,6 +64,5 @@
     "url": "https://github.com/ssc-hermes/envelope/issues"
   },
   "homepage": "https://github.com/ssc-hermes/envelope#readme",
-  "author": "nichoth <nichoth@gmail.com> (https://nichoth.com)",
-  "license": "AGPL-3.0-or-later"
+  "author": "nichoth <nichoth@gmail.com> (https://nichoth.com)"
 }
